[package]
name = "lsrs"
version = "0.1.0"
authors = ["lyyyuna <lyyyuna@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsrs"
path = "src/bin/main.rs"

[lib]
name = "lsrs"
path = "src/ls.rs"

[dependencies]
